--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^22.14.1"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.7.0",
     "moment-timezone": "^0.5.48",
     "winston": "^3.17.0"
   }
