--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "kms_home_assignment",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/matanel-mor/kms_home_assignment.git"
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
+    "dotenv": "^16.5.0",
     "moment-timezone": "^0.5.48",
     "winston": "^3.17.0"
   }
